--- a/src/entete.scss
+++ b/src/entete.scss
@@ -18,9 +18,9 @@
     
    }
    
-.avatar>img{
+.MuiAvatar-img{
     border-radius: 100%;
     display: flex;
-    padding: 3px;
-    padding-left: 7px;
+    padding-right: 3px;
+    padding-left: 10px;
    }
